# simetra_test

./: .env_template  README.md  alembic.ini  docker-compose.yml  excel_downloader.py  pyproject.toml
alembic/: env.py
alembic/versions/: ed66e4aa7826_initial_migration.py
app/: .env_template  Dockerfile  main.py
app/api/: routers.py  utils.py  validators.py
app/api/endpoints/: __init__.py  vehicles.py
app/core/: __init__.py  config.py  db.py
app/crud/: track.py
app/models/: __init__.py  track.py
app/schemas/: __init__.py  track.py
nginx/: default.conf
