[tool.poetry]
name = "excel-to-postgis-loader"
version = "0.1.0"
description = "A tool to load data from Excel files into a PostGIS database."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
geopandas = "^0.14.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
geoalchemy2 = "^0.14.6"
openpyxl = "^3.1.2"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
aiopg = "^1.4.0"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
flake8 = "^7.0.0"
isort = "^5.13.2"




[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
